[project]
name = "nonebot_plugin_arxivRSS"
version = "0.2.0"
description = "Plugin of Nonebot2. Subscribe and push Arxiv RSS daliy."
authors = [
    {name = "LuckyOrz", email = "lucky.wangyixuan@gmail.com"},
]
dependencies = [
    "feedparser",
    "nonebot2>=2.0.0",
    "httpx>=0.23.3",
    "nonebot-adapter-onebot",
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_localstore",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}